--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ html {
 
 body {
   width: 98%;
-  height: 96%;
+  height: 99%;
   padding: 0;
   margin: .8em auto;
   text-align: center;
@@ -105,7 +105,11 @@ ul {
 /*---------------------------------------------------------------------------------
   Media queries
 ---------------------------------------------------------------------------------*/
-
+@media screen and (max-width: 415px){
+  .game, input, button{
+    width: 95% !important;
+  }
+}
 @media screen and (min-width: 40rem) {
   html {
     font-size: 120%;
@@ -308,6 +312,6 @@ ol {
   outline: 0;
 }
 
-#what:target {
-  animation: section-highlight 3s;
+.new{
+  cursor: pointer;
 }
