--- a/src/components/info.css
+++ b/src/components/info.css
@@ -30,9 +30,9 @@
   background: #e74c3c;
   position: relative;
   height: auto;
-  width: 600px;
+  width: 98%;
   border-radius: 3px;
-  top: 15%;
+  top: 5%;  /* 15% */
   margin: auto auto;
   border: 1px solid rgba(0,0,0,0.1);
 }
@@ -52,14 +52,14 @@
 	padding: 15px 40px 30px;
 	margin: 0;
 	font-weight: 300;
-	font-size: 1.15em;
+	font-size: .85em;
 }
 
 .content > div p {
 	margin: 0;
 	padding: 10px 0;
 	line-height: 2em;
-	text-align: justify;
+	text-align: left;
 }
 
 .content > div ul {
@@ -86,4 +86,17 @@
 	padding: 0.5em 2em;
 	margin-bottom: 50px;
 	border-radius: 3px;
+}
+
+.content > button {
+	width: 75%;
+}
+
+@media screen and (min-width: 500px){
+	.content{
+		top: 10%;
+	}
+	.content > div{
+		font-size: 105%;
+	}
 }
